--- a/index.html
+++ b/index.html
@@ -7,45 +7,47 @@
   <title>BG Assignment</title>
 </head>
 <body>
-  <center><h1>Working with media files</h1></center>
-  <h2>Types of media</h2>
-  <ul>
-    <li>image</li>
-    <li>vedio</li>
-    <li>audio</li>
-    <li>document</li>
-  </ul>
-  <h2>Images</h2>
-  <h3>Examples of image</h3> 
+  <center><h1>BILAL GARKO'S EDUCATION JOURNEY</h1></center>
+  <p>My name is Bilal Idris Garko, I am a student of computer science at Gombe State University. I started my education journey in 2008 when I was enrolled in nursery school. After which I proceeded to completing my primary education in Darul Arqam Academy Gombe, I proceeded to secondary school in same school somewhere around 2017. In 2022, I completed my secondary education and decided to pursue higher education. I got admitted in Gombe State University in the same year to study computer science. Throughout my education journey, I have gained valuable knowledge and skills that have helped me grow both academically and personally. Am currently in 300L and doing my Industrial Training at PANTAMI DIGITAL AGE TECHNOLOGIES ICT HUB</p>
+  <h2>Other part of the journey</h2>
+    
   <center>
-    <image src="./assets/image/img 1.jpg" weidth="60%" height="300px"/>
-    <br/>
-    <image src="./assets/image/img 2.jpg" weidth="60%" height="300px"/>
-    <image src="./assets/image/img 3.jpg" weidth="60%" height="300px"/>
-    <image src="./assets/image/img 4.jpg" weidth="60%" height="300px"/>
+    <image src="./assets/image/MATRIC.JPG" width="40%" height="300px"/>
+    <p>The day I and my colleagues where matriculated at GSU in Computer Science Department. We happily enjoyed the moment despite the fact that MATH103 and PHY101 are waiting for us in the corner.</p>
+      <br/>
+    <image src="./assets/image/FUK.jpg" weidth="500px" height="300px"/>
+      <h4>An educational trip to FUK</h4>
+    <image src="./assets/image/SUMMIT.jpg" weidth="60%" height="300px"/>
+      <h4>Tech Ignite 0.1 Summit @GSU in my proud department</h4>
   </center>
-  <h3>Example of video</h3>">
+  
   <center>
-    <video width="40%" height="40%"controls>
-      <source src="./assets/video/VID-20250717-WA0005.mp4" type="video/mp4">
+    <video width="400px" height="25%"controls>
+      <source src="./assets/video/CODE.mp4" type="video/mp4">
     </video>
-    <br/>
-    <video width="40%" height="40%" controls>
-      <source src="./assets/video/VID-20250910-WA0012.mp4" type="video/mp4">
-    </video>
+    <p>I and my colleagues together with our tutor while learning some HTML elements and how to work with Github at GeekInk sharing ideas and coding the future . I love coding and I always try to practice it whenever I have the time. Coding is my passion and I hope to become a professional developer in the future.</p>
   </center>
-  <h3>Example of audio</h3>
+  <h3>How to Contact Me</h3>
+  <p>If you have any questions or feel like to get in touch please fill this form please.</p>
+  <p>You can also check my other works in my Github at https://github.com/Bilalgarko</p>
+  <a href="https://github.com/Bilalgarko">Visit Github</a>
   <center>
-    <audio controls>
-        <source src="./assets/audio/music.mp3" type="audio/mp3"> 
-    </audio>
+    <form>
+      <label>Name:</label>
+      <input type="text">
+      <label>Email:</label>
+      <input type="email">
+      <br/>
+      <br/>
+      <input type="Submit">
+    </form>
   </center>
-<h3>Example of document</h3>
+  <h5>To start learning you can simply download the following document, it contains guidlines about HTML.</h5>
 <center>
     <a href="./assets/document/HTML PDF.pdf" download>Download sample of pdf document</a>
 </center>
 <center>
-  <embed src="./assets/document/HTML PDF.pdf" width="60%" height="500px">
+  <h4>Thank you!</h4>
 </center>
 </body>
 </html>
@@ -54,3 +56,27 @@
 
 
 
+
+
+
+<!----
+
+<body>
+    <h1>Welcome to GreenCycle</h1>
+    <p>GreenCycle is a fictional product that helps reduce waste and promote sustainability. Our mission is to make eco-friendly living accessible to everyone.</p>
+    <img src="https://picsum.photos/200/300" alt="GreenCycle Product">
+    <img src="https://picsum.photos/200/301" alt="GreenCycle in use">
+    <img src="https://picsum.photos/200/302" alt="GreenCycle benefits">
+    <p>Learn more about our product and how it can help you live a more sustainable lifestyle.</p>
+    <a href="https://www.example.com/greencycle-product">Learn More</a>
+    <a href="https://www.example.com/greencycle-blog">Visit our Blog</a>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
+      <button>Submit</button>
+    </form>
+  </main>
+</body>
+</html> >
