--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>BG Assignment</title>
 </head>
 <body>
-  <center><h1>BILAL GARKO'S EDUCATION JOURNEY</h1></center>
-  <p>My name is Bilal Idris Garko, I am a student of computer science at Gombe State University. I started my education journey in 2008 when I was enrolled in nursery school. After which I proceeded to completing my primary education in Darul Arqam Academy Gombe, I proceeded to secondary school in same school somewhere around 2017. In 2022, I completed my secondary education and decided to pursue higher education. I got admitted in Gombe State University in the same year to study computer science. Throughout my education journey, I have gained valuable knowledge and skills that have helped me grow both academically and personally. Am currently in 300L and doing my Industrial Training at PANTAMI DIGITAL AGE TECHNOLOGIES ICT HUB</p>
+  <center><h1>BILAL GARKO'S EDUCATIONAL JOURNEY</h1></center>
+  <p>My name is Bilal Idris Garko, I am a student of computer science at Gombe State University. I started my education journey in 2008 when I was enrolled in nursery school at ECCDE Buhari Estat. After which I proceeded to complete my primary education at Darul Arqam Academy Gombe, I also proceeded to secondary school in same school in 2017. In 2022, I completed my secondary education and decided to pursue my higher education at Gombe State University in the same year to study computer science. Throughout my education journey, I have gained alot of knowledge and skills that have helped me grow academically. Am currently in 300L and doing my Industrial Training at PANTAMI DIGITAL AGE TECHNOLOGIES ICT HUB</p>
   <h2>Other part of the journey</h2>
     
   <center>
     <image src="./assets/image/MATRIC.JPG" width="55%" height="250px"/>
-    <p>The day I and my colleagues where matriculated at GSU in Computer Science Department. We happily enjoyed the moment despite the fact that MATH103 and PHY101 are waiting for us in the corner.</p>
+    <p>The day, I and my colleagues were matriculated at GSU in Computer Science Department. We happily enjoyed the moment despite the fact that MATH103 and PHY101 are waiting us in the corner.</p>
       <br/>
     <image src="./assets/image/FUK.jpg" weidth="500px" height="300px"/>
       <h4>An educational trip to FUK</h4>
@@ -25,10 +25,10 @@
     <video width="300px" height="25%"controls>
       <source src="./assets/video/CODE.mp4" type="video/mp4">
     </video>
-    <p>I and my colleagues together with our tutor while learning some HTML elements and how to work with Github at GeekInk sharing ideas and coding the future . I love coding and I always try to practice it whenever I have the time. Coding is my passion and I hope to become a professional developer in the future.</p>
+    <p>I and my colleagues together with our tutor while learning some HTML elements and how to work with Github at GeekInk, sharing ideas and coding the future . I love coding and I always try to practice it whenever I have the time. Coding is my passion and I hope to become a professional developer in the future.</p>
   </center>
   <h3>How to Contact Me</h3>
-  <p>If you have any questions or feel like to get in touch please fill this form please.</p>
+  <p>If you have any questions or feel like to get in touch with me please fill this form.</p>
   <p>You can also check my other works in my Github at https://github.com/Bilalgarko</p>
   <a href="https://github.com/Bilalgarko">Visit Github</a>
   <center>
